# EnterpriseIQ

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PROTECTION.md  README.md  REFLECTION.md  ROADMAP.md  SPECIFICATION.md  SRD.md  STAKEHOLDERS.md  Usecases.md  VOTING_RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
api/routers/: documents.py  queries.py  users.py
creational_patterns/: abstract_factory.py  builder.py  factory_method.py  prototype.py  simple_factory.py  singleton.py
creational_patterns/# creational_patterns/# creational_patterns/: abstract_factory.py
docs/: REFLECTION.md  Testcases.md  activity_diagram.md  class_diagram.md  domain_model.md  kanban_explanation.md  state_diagrams.md  template_analysis.md
docs/assignment6/: Backlog.md  Sprint.md  UserStories.md
factories/: repository_factory.py
repositories/: base_repository.py  interfaces.py
repositories/database/: database_repositories.py
repositories/filesystem/: filesystem_repositories.py
repositories/inmemory/: inmemory_repositories.py
services/: document_service.py  query_service.py  user_service.py
src/: models.py
tests/: test_all.py  test_repositories.py
tests/api/: test_api.py
tests/services/: test_services.py
